--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -330,8 +330,8 @@
         <h4 style="margin: 0;">Which lesson are you teaching today?</h4>
         <button id="actNav" class="button">ACT</button>
         <button id="subjectTutoringNav" class="button">Subject Tutoring</button>
-        <button id="mathProgramNav" class="button">Math Program</button>
-        <button id="phonicsProgramNav" class="button">Phonics Program</button>
+        <!-- <button id="mathProgramNav" class="button">Math Program</button>
+        <button id="phonicsProgramNav" class="button">Phonics Program</button> -->
         <button id="registrationNav" class="button">Registration</button>
         <button id="paymentNav" class="button">Payment</button>
     </section>
@@ -345,7 +345,7 @@
 
       <div class="flex-row align-center">
         <button class="button" onclick="goToInquiry()">Inquiry</button>
-        <button class="button" onclick="window.location.href='../calendar.html'">Calendar Testing</button>
+        <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
         <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
         <button class="button" onclick="goToStaffRegistration()">Add Staff</button>
         <!-- <button class="button" onclick="openModal('admin')">Add Admin</button> -->
