--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -109,7 +109,7 @@
     </section> -->
 
     <section id = 'topNavigationBanner'>
-        <img id = 'logo' src='../../Images/Wasatch Logo.png' onclick="goToDashboard()">
+        <img id = 'logo' src='../../Images/Lyrn_Logo.png' onclick="goToDashboard()">
     </section>
 
     <div id = 'testPopup' style = 'display:none;' onmouseover = "showTestPopup()" onmouseout = "hideTestPopup()">
