--- a/public/parent-payment.html
+++ b/public/parent-payment.html
@@ -31,10 +31,10 @@
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
       <ul>
-        <li><a href="#">Tutoring</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Our Story</a></li>
-        <li><a href="#">Parent Portal</a></li>
         <li><a href="#">Pricing</a></li>
+        <li><a href="#">Sign In</a></li>
         <!-- <li><a class="enroll" href="#contact">Enroll</a></li> -->
       </ul>
     </nav>
