--- a/public/payment.html
+++ b/public/payment.html
@@ -84,6 +84,10 @@
                   <option value="usd" selected>USD</option>
                 </select>
               </label>
+              <label>
+                Payoff remaining lessons
+                <input type="checkbox" name="payoff" id="payoff">
+              </label>
             </div>
             <button type="submit">Charge card</button>
             <button type="button" id="save-card-button">Save card</button>
