--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
         </div>
       </section>
   
-      <section class="tutors">
+      <!-- <section class="tutors">
         <h5 class="title">Lyrn Qualified Tutors</h5>
         <p class="description">All of our tutors have been certified to teach the ACT and have recieved exeptional grades
           in all college level subject matter courses.
@@ -177,7 +177,7 @@
             <h5>COLLEGE GPA</h5>
           </div>
         </div>
-      </section>
+      </section> -->
   
       <section class="contact" id="contact">
         <div class="filter"></div>
