--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Lyrn Tutoring is bringing education into the 21st century with adaptive learning.">
-    <title>Lyrn Tutoring</title>
+    <meta name="description" content="Lyrn Tutoring is bringing education into the 21st century with adaptive learning. Data driven success for your student in any class or upcoming test.">
+    <title>Lyrn | Data Driven Tutoring through Adaptive Learning</title>
 
     <!-- Firebase -->
     <script>
@@ -28,6 +28,9 @@
   <body>
     <header class="nav-start">
       <a href="#" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+      </label>
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
@@ -35,12 +38,9 @@
           <li><a href="#">Our Story</a></li>
           <li><a href="#">Pricing</a></li>
           <li><a href="sign-in.html">Sign In</a></li>
-          <li><a class="enroll" href="#contact">Enroll</a></li>
+          <li><a class="enroll" href="enroll.html">Enroll</a></li>
         </ul>
       </nav>
-      <label for="nav-toggle" class="nav-toggle-label">
-        <span></span>
-      </label>
     </header>
 
     <main>
@@ -106,7 +106,7 @@
         <div class="hero__intro">
           <h1>Get Into Your Dream College</h1>
           <h4>ACT and Subject Tutoring with Adaptive Learning Intelligence</h4>
-          <div><a class="enroll" href="#contact">Enroll</a></div>
+          <div><a class="enroll" href="enroll.html">Enroll</a></div>
         </div>
         <div class="hero__body">
             <img src="Images/Lyrn_hero_section_image.png" alt="Adaptive Learning in action">
@@ -195,7 +195,7 @@
             <input type="text" name="name" id="name" required>
             <label for="email">Email Address</label>
             <input type="email" name="email" id="email" required>
-            <label for="phoneNumber">Phone Number</label>
+            <label for="number">Phone Number</label>
             <input type="tel" id="number" name="number">
             <label for="course">Subject</label>
             <div class="select-wrapper">
@@ -289,7 +289,7 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="">About Lyrn</a></li>
-            <li><a href="">Enrollment</a></li>
+            <li><a href="enroll.html">Enrollment</a></li>
             <li><a href="sign-in.html">Parent Portal</a></li>
             <li><a href="">Pricing</a></li>
             <li><a href="sign-in.html">Log In</a></li>
