cleaning up website

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Our Story</a></li>
+          <li><a href="story.html">Our Story</a></li>
           <li><a href="#">Pricing</a></li>
           <li><a href="sign-in.html">Sign In</a></li>
           <li><a class="enroll" href="enroll.html">Enroll</a></li>
@@ -307,8 +307,8 @@
         <div>
           <h3>Contact Us</h3>
           <ul>
-            <li><a href="#contact">Email Us</a></li>
-            <li><a href="">801-555-555</a></li>
+            <li><a href="mailto:contact@lyrnwithus.com">contact@lyrnwithus.com</a></li>
+            <li><a href="tel:+13857070215">(385) 707-0215</a></li>
           </ul>
         </div>
       </div>
