--- a/public/parent-payment.html
+++ b/public/parent-payment.html
@@ -32,7 +32,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Our Story</a></li>
+        <li><a href="story.html">Our Story</a></li>
         <li><a href="#">Pricing</a></li>
         <li><a href="#">Sign In</a></li>
         <!-- <li><a class="enroll" href="#contact">Enroll</a></li> -->
@@ -110,12 +110,12 @@
       <div>
         <h1>Site Map</h1>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About Lyrn</a></li>
-          <li><a href="">Enrollment</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="story.html">About Lyrn</a></li>
+          <li><a href="enroll.html">Enrollment</a></li>
           <li><a href="#">Parent Portal</a></li>
           <li><a href="">Pricing</a></li>
-          <li><a href="">Log In</a></li>
+          <li><a href="sign-in.html">Log In</a></li>
         </ul>
       </div>
       <div>
@@ -130,8 +130,8 @@
       <div>
         <h1>Contact Us</h1>
         <ul>
-          <li><a href="">Email Us</a></li>
-          <li><a href="">801-555-555</a></li>
+          <li><a href="mailto:contact@lyrnwithus.com">contact@lyrnwithus.com</a></li>
+            <li><a href="tel:+13857070215">(385) 707-0215</a></li>
         </ul>
       </div>
     </div>
