--- a/public/enroll.html
+++ b/public/enroll.html
@@ -32,7 +32,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Our Story</a></li>
+          <li><a href="story.html">Our Story</a></li>
           <li><a href="#">Pricing</a></li>
           <li><a href="sign-in.html">Sign In</a></li>
           <li><a class="enroll" href="#">Enroll</a></li>
@@ -51,7 +51,7 @@
         </div>
         <div class="contact-form">
           <h3>Schedule Your Meeting</h3>
-          <h5>Schedule your Enrollment Conference and recieve your Adaptive Learning Course</h5>
+          <h5>Let's talk! One of our program specialist will contact you to learn more about your student's needs.</h5>
           <form action="" id="contactForm">
             <label for="name">First and Last Name</label>
             <input type="text" name="name" id="name" required>
@@ -119,8 +119,8 @@
           <h3>Site Map</h3>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="">About Lyrn</a></li>
-            <li><a href="enroll.html">Enrollment</a></li>
+            <li><a href="story.html">About Lyrn</a></li>
+            <li><a href="#">Enrollment</a></li>
             <li><a href="sign-in.html">Parent Portal</a></li>
             <li><a href="">Pricing</a></li>
             <li><a href="sign-in.html">Log In</a></li>
@@ -138,8 +138,8 @@
         <div>
           <h3>Contact Us</h3>
           <ul>
-            <li><a href="#">Email Us</a></li>
-            <li><a href="">801-555-555</a></li>
+            <li><a href="mailto:contact@lyrnwithus.com">contact@lyrnwithus.com</a></li>
+            <li><a href="tel:+13857070215">(385) 707-0215</a></li>
           </ul>
         </div>
       </div>
