--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -55,11 +55,11 @@
         </div>
         <button class="button" onclick="signOut()">Sign Out</button>
       </div>
-      <div class="input-row">
+      <!-- <div class="input-row">
         <div class="input-block">
           <button class="button" onclick="resetPassword()">reset password</button>
         </div>
-      </div>
+      </div> -->
 
       <!-- <div>
         <table id="student-table" class="display" width="100%">
@@ -78,11 +78,11 @@
       </div>
 
       <!-- feedback area -->
-      <div style="margin: 25px;">
+      <!-- <div style="margin: 25px;">
         <h3>Feedback</h3>
         <textarea id="feedback_input" class="feedback_input" placeholder="any feedback?"></textarea>
         <p id="feedback_error_msg"></p>
         <button id="feedback_submit_btn" class="button" onclick="submitFeedback()">Submit</button>
-      </div>
+      </div> -->
     </section>
   </body>
