clean up and pricing

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,9 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="story.html">Our Story</a></li>
-          <li><a href="#">Pricing</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
           <li><a href="sign-in.html">Sign In</a></li>
+          <li><a href="sign-up.html">Sign Up</a></li>
           <li><a class="enroll" href="enroll.html">Enroll</a></li>
         </ul>
       </nav>
@@ -291,7 +292,7 @@
             <li><a href="">About Lyrn</a></li>
             <li><a href="enroll.html">Enrollment</a></li>
             <li><a href="sign-in.html">Parent Portal</a></li>
-            <li><a href="">Pricing</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
             <li><a href="sign-in.html">Log In</a></li>
           </ul>
         </div>
