--- a/public/pricing.html
+++ b/public/pricing.html
@@ -44,19 +44,19 @@
               <h2>ACT Prep</h2>
             </div>
             <h3>Score your ACT Goal</h3>
-            <p>Sign up to get one on one tutoring from Lyrn's ACT certified tutors. Students recieve a full length ACT preliminary package, which includes the official ACT test,
+            <!-- <p>Sign up to get one on one tutoring from Lyrn's ACT certified tutors. Students recieve a full length ACT preliminary package, which includes the official ACT test,
               1 hour post test review, and a college readiness conference. Tutors and student will set a goal together and over the course of our custom courses, will use Lyrn's Adaptive Learning 
               Technology to meet the goal.
-            </p>
+            </p> -->
           </div>
           <div class="course-block">
             <div class="course-card redish" onclick="openCourse('subjectTutoring')">
               <h2>Subject Tutoring</h2>
             </div>
             <h3>Any homework, we can help</h3>
-            <p>Whether you're in a rut and can't seem to get that biology assignment finished or you feel like you're falling behind in math, Lyrn Tutoring can help you finish your homework feeling
+            <!-- <p>Whether you're in a rut and can't seem to get that biology assignment finished or you feel like you're falling behind in math, Lyrn Tutoring can help you finish your homework feeling
               confident. Tutors and students will make goals together and will help the student complete homework until grade or missing assignment goals are met.
-            </p>
+            </p> -->
           </div>
         </div>
       </section>
@@ -130,7 +130,7 @@
             </div>
             <div class="length">
               <h4>Suggested Program Length</h4>
-              <h5>12 sessions (3 per section)</h5>
+              <h5>12 sessions</h5>
               <p>18 hours of instruction</p>
             </div>
             <ul>
@@ -158,7 +158,7 @@
             </div>
             <div class="length">
               <h4>Suggested Program Length</h4>
-              <h5>24 sessions (6 per section)</h5>
+              <h5>24 sessions</h5>
               <p>36 hours of instruction</p>
             </div>
             <ul>
