--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="story.html">Our Story</a></li>
+          <li><a href="why.html">Why Lyrn</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="sign-in.html">Sign In</a></li>
           <li><a href="sign-up.html">Sign Up</a></li>
@@ -111,6 +112,20 @@
         </div>
         <div class="hero__body">
             <img src="Images/Lyrn_hero_section_image.png" alt="Adaptive Learning in action">
+        </div>
+      </section>
+
+      <section class="help">
+        <h2 class="title">I need help with</h2>
+        <div class="course-grid">
+          <a href="pricing.html?course=act" class="course-item"><h4>ACT Test Prep</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Physics Homework</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Math Homework</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Reading Homework</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>English Homework</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>AP Test Prep</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Chemistry Homework</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Other Homework</h4></a>
         </div>
       </section>
   
@@ -212,20 +227,6 @@
             <textarea name="message" id="message"></textarea>
             <input type="submit" value="Enroll" class="enroll">
           </form>
-        </div>
-      </section>
-  
-      <section class="help">
-        <h2 class="title">I need help with</h2>
-        <div class="course-grid">
-          <a href="" class="course-item"><h4>ACT Test Prep</h4></a>
-          <a href="" class="course-item"><h4>Physics Homework</h4></a>
-          <a href="" class="course-item"><h4>Math Homework</h4></a>
-          <a href="" class="course-item"><h4>Reading Homework</h4></a>
-          <a href="" class="course-item"><h4>English Homework</h4></a>
-          <a href="" class="course-item"><h4>AP Test Prep</h4></a>
-          <a href="" class="course-item"><h4>Chemistry Homework</h4></a>
-          <a href="" class="course-item"><h4>Other Homework</h4></a>
         </div>
       </section>
   
