--- a/public/staff-registration.html
+++ b/public/staff-registration.html
@@ -60,13 +60,13 @@
             </div>
             <!-- Staff Role -->
             <div class="input-block">
-              <label for="roless" class="label">Role(s):</label>
-              <div class="more-info" data-more-info="The role(s) the staff will have. Permissions will be based on the highest role.">?</div>
-              <select id="roles" name="roles" class="ui dropdown" multiple required>
+              <label for="role" class="label">Role</label>
+              <div class="more-info" data-more-info="The role the staff will have.">?</div>
+              <select id="role" name="role" class="ui dropdown" required>
                 <option value="tutor">Tutor</option>
                 <option value="secretary">Secretary</option>
                 <option value="admin">Admin</option>
-                <option value="inactive">Inactive</option>
+                <!-- <option value="inactive">Inactive</option> -->
               </select>
             </div>
           </div>
