--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,10 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="story.html">Our Story</a></li>
           <li><a href="why.html">Why Lyrn</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="sign-in.html">Sign In</a></li>
-          <li><a href="sign-up.html">Sign Up</a></li>
-          <li><a class="enroll" href="enroll.html">Enroll</a></li>
+          <li><a class="enroll" href="sign-up.html">Enroll</a></li>
         </ul>
       </nav>
     </header>
@@ -61,11 +59,11 @@
           <div class="background-item noselect">Extrapolation</div>
           <div class="background-item noselect">Sentence Structure</div>
           <div class="background-item noselect">Circles</div>
-          <div class="background-main noselect">ACT Test Prep</div>
-          <div class="background-main noselect">Subject Tutoring</div>
-          <div class="background-main noselect">AP Exam Prep</div>
-          <div class="background-main noselect">Homework Help</div>
-          <div class="background-main noselect">College Consultation</div>
+          <div class="background-main noselect mobile">ACT Test Prep</div>
+          <div class="background-main noselect mobile">Subject Tutoring</div>
+          <div class="background-main noselect mobile">AP Exam Prep</div>
+          <div class="background-main noselect mobile">Homework Help</div>
+          <div class="background-main noselect mobile">College Consultation</div>
   
           <!-- left -->
           <div class="background-item noselect">Advanced Trig</div>
@@ -106,26 +104,54 @@
           <div class="background-main noselect">College Consultation</div>
         </div>
         <div class="hero__intro">
-          <h1>Get Into Your Dream College</h1>
-          <h4>ACT and Subject Tutoring with Adaptive Learning Intelligence</h4>
-          <div><a class="enroll" href="enroll.html">Enroll</a></div>
+          <h1>Data-Driven Tutoring</h1>
+          <h4>Subject Tutoring and ACT Prep with <a href="why.html">Adaptive Learning Intelligence</a></h4>
+          <div><a class="enroll" href="sign-up.html">Enroll</a></div>
         </div>
-        <div class="hero__body">
+        <!-- <div class="hero__body">
             <img src="Images/Lyrn_hero_section_image.png" alt="Adaptive Learning in action">
-        </div>
+        </div> -->
       </section>
 
-      <section class="help">
-        <h2 class="title">I need help with</h2>
-        <div class="course-grid">
-          <a href="pricing.html?course=act" class="course-item"><h4>ACT Test Prep</h4></a>
-          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Physics Homework</h4></a>
-          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Math Homework</h4></a>
-          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Reading Homework</h4></a>
-          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>English Homework</h4></a>
-          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>AP Test Prep</h4></a>
-          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Chemistry Homework</h4></a>
-          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Other Homework</h4></a>
+      <section class="about">
+        <h2>How can we help?</h2>
+        <div class="about-details">
+          <div class="details">
+            <input type="checkbox" name="about_1" id="about_1" class="about_toggle" checked>
+            <label for="about_1" class="summary"><h3>Math is a struggle</h3></label>
+            <div class="content">
+              <p>Math is always voted the worst subject in school and we think it's because students aren't getting the help they need to succeed. Enroll in subject tutoring
+                to schedule a lesson as soon as tomorrow. By <a href="sign-up.html">enrolling</a> now, you will access to a personalized dashboard where you can sign up for as many lessons as your
+                students needs all with no contract.
+              </p>
+              <a href="pricing.html?course=subjectTutoring">Learn more</a>
+              <img src="Images/Lyrn_About_1.png" alt="General Tutoring">
+            </div>
+          </div>
+          <div class="details">
+            <input type="checkbox" name="about_2" id="about_2" class="about_toggle">
+            <label for="about_2" class="summary"><h3>Need homework help</h3></label>
+            <div class="content">
+              <p>We got you covered! Our professional tutors are outstanding students working towards degrees in the very subjects your student needs help in. They know what it is like to be struggling
+                with classses because they are doing the same thing right now. Get started now by <a href="sign-up.html">enrolling</a> and we can get you scheduled as soon as tomorrow with a qualified 
+                tutor. No contracts, just hop onto your portal at any time to schedule a lesson. 
+              </p>
+              <a href="pricing.html?course=subjectTutoring">Learn more</a>
+              <img src="Images/Lyrn_About_2.png" alt="Math Tutoring Plan">
+            </div>
+          </div>
+          <div class="details">
+            <input type="checkbox" name="about_3" id="about_3" class="about_toggle">
+            <label for="about_3" class="summary"><h3>Meet your ACT goals</h3></label>
+            <div class="content">
+              <p>Whether you need just a few more points to get into the college of your dreams or want 5+ increase to guarantee scholarships, our adaptive ACT programs are what you have been looking for.
+                We keep track of every question your student is given during our program to truly create a personalized curriculum. Our data-driven approach is leading the way in bringing education into
+                the 21st century. You can <a href="sign-up.html">enroll</a> to get started with a initial consultation before commiting to a program.
+              </p>
+              <a href="pricing.html?course=act">Learn more</a>
+              <img src="Images/Lyrn_About_3.png" alt="English Tutoring Plan">
+            </div>
+          </div>
         </div>
       </section>
   
@@ -137,42 +163,6 @@
           Lyrn can help you ace your subject with a highly unique tutoring plan made just for you.
         </p>
         <img src="Images/Lyrn_method_section_image.png" alt="Example course load">
-      </section>
-  
-      <section class="about">
-        <div class="details">
-          <input type="checkbox" name="about_1" id="about_1" class="about_toggle" checked>
-          <label for="about_1" class="summary"><h3>Not Just Personal. Curated</h3></label>
-          <div class="content">
-            <p>Our courses are designed to give students specific topics to focus on with our professional tutors,
-              so that your student recieves not just 1 on 1 tutoring but a unique, curated education.
-              Each time a student completes a Lyrn course, their next visit will be a completely new and educational experience.
-            </p>
-            <img src="Images/Lyrn_About_1.png" alt="General Tutoring">
-          </div>
-        </div>
-        <div class="details">
-          <input type="checkbox" name="about_2" id="about_2" class="about_toggle">
-          <label for="about_2" class="summary"><h3>Calculates the Perfect Math Plan</h3></label>
-          <div class="content">
-            <p>Our courses are designed to give students specific topics to focus on with our professional tutors,
-              so that your student recieves not just 1 on 1 tutoring but a unique, curated education.
-              Each time a student completes a Lyrn course, their next visit will be a completely new and educational experience.
-            </p>
-            <img src="Images/Lyrn_About_2.png" alt="Math Tutoring Plan">
-          </div>
-        </div>
-        <div class="details">
-          <input type="checkbox" name="about_3" id="about_3" class="about_toggle">
-          <label for="about_3" class="summary"><h3>Conquer Your English Homework</h3></label>
-          <div class="content">
-            <p>Our courses are designed to give students specific topics to focus on with our professional tutors,
-              so that your student recieves not just 1 on 1 tutoring but a unique, curated education.
-              Each time a student completes a Lyrn course, their next visit will be a completely new and educational experience.
-            </p>
-            <img src="Images/Lyrn_About_3.png" alt="English Tutoring Plan">
-          </div>
-        </div>
       </section>
   
       <!-- <section class="tutors">
@@ -194,41 +184,6 @@
           </div>
         </div>
       </section> -->
-  
-      <section class="contact" id="contact">
-        <div class="filter"></div>
-        <div class="contact__intro">
-          <h2>Next Steps</h2>
-          <h4>Meet with your tutors and select the help you need. Then take the initial
-            Lyrn quiz to build your personalized tutoring just for you.
-          </h4>
-        </div>
-        <div class="contact-form">
-          <h3>Schedule Your Meeting</h3>
-          <h5>Schedule your Enrollment Conference and recieve your Adaptive Learning Course</h5>
-          <form action="" id="contactForm">
-            <label for="name">First and Last Name</label>
-            <input type="text" name="name" id="name" required>
-            <label for="email">Email Address</label>
-            <input type="email" name="email" id="email" required>
-            <label for="number">Phone Number</label>
-            <input type="tel" id="number" name="number">
-            <label for="course">Subject</label>
-            <div class="select-wrapper">
-              <select name="course" id="course" required>
-                <option value="" disabled selected>Courses</option>
-                <option value="act">ACT Test Prep</option>
-                <option value="ap">AP Exam Prep</option>
-                <option value="subjectTutoring">Subject Tutoring</option>
-                <option value="other">Other</option>
-              </select>
-            </div>
-            <label for="message">Message</label>
-            <textarea name="message" id="message"></textarea>
-            <input type="submit" value="Enroll" class="enroll">
-          </form>
-        </div>
-      </section>
   
       <!-- <section class="faq">
         <h2 class="title">FAQ</h2>
@@ -274,9 +229,59 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus magni ducimus provident exercitationem recusandae reprehenderit, earum porro voluptatum, aliquid doloremque cupiditate sapiente nulla iusto deleniti optio culpa rerum ratione consequuntur?</p>
           </div>
         </div>
+      </section> -->
+
+      <section class="help">
+        <h2 class="title">I need help with</h2>
+        <div class="course-grid">
+          <a href="pricing.html?course=act" class="course-item"><h4>ACT Test Prep</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Physics Homework</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Math Homework</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Reading Homework</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>English Homework</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>AP Test Prep</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Chemistry Homework</h4></a>
+          <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Other Homework</h4></a>
+        </div>
+      </section>
+   
+      <section class="contact" id="contact">
+        <div class="filter"></div>
+        <div class="contact__intro">
+          <h2>Next Steps</h2>
+          <h4>You can <a href="sign-up.html">enroll</a> now or if you still have some questions let know us know how we can contact you.
+          </h4>
+        </div>
+        <div class="contact-form">
+          <h3>Let us contact you</h3>
+          <h5>We will get back to you as soon as we can to answer any question you have about Lyrn</h5>
+          <form action="" id="contactForm">
+            <label for="name">First and Last Name</label>
+            <input type="text" name="name" id="name" required>
+            <label for="email">Email Address</label>
+            <input type="email" name="email" id="email" required>
+            <label for="number">Phone Number</label>
+            <input type="tel" id="number" name="number">
+            <label for="course">Subject</label>
+            <div class="select-wrapper">
+              <select name="course" id="course" required>
+                <option value="" disabled selected>Courses</option>
+                <option value="act">ACT Test Prep</option>
+                <option value="ap">AP Exam Prep</option>
+                <option value="subjectTutoring">Subject Tutoring</option>
+                <option value="other">Other</option>
+              </select>
+            </div>
+            <label for="message">Message</label>
+            <textarea name="message" id="message"></textarea>
+            <input type="submit" value="Submit">
+          </form>
+          <p>or you can give us a call 1pm to 9pm MDT</p>
+          <a href="tel:+13857070215">(385) 707-0215</a>
+        </div>
       </section>
   
-      <section class="topics"></section> -->
+      <section class="topics"></section>
     </main>
 
     <footer>
