--- a/public/pricing.html
+++ b/public/pricing.html
@@ -142,12 +142,11 @@
               <li>Test tips and strategies</li>
               <li>Full section homework</li>
             </ul>
-            <div class="discount-wrapper">
-              <h3>10% off</h3>
-              <h4>When you pay up-front</h4>
-            </div>
             <div class="select">
               <h3>Select</h3>
+            </div>
+            <div class="discount-wrapper">
+              <p>10% off When you pay up-front</p>
             </div>
           </div>
           <div class="plan-wrapper comprehensive">
@@ -175,12 +174,11 @@
               <li>1 Full-length mid-program test</li>
               <li>In-depth Subject Reviews</li>
             </ul>
-            <div class="discount-wrapper">
-              <h3>10% off</h3>
-              <h4>When you pay up-front</h4>
-            </div>
             <div class="select">
               <h3>Select</h3>
+            </div>
+            <div class="discount-wrapper">
+              <p>10% off When you pay up-front</p>
             </div>
           </div>
         </div>
