--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -40,12 +40,26 @@
 
     <main>
       <section class="register">
-        <div class="info">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto similique ut eius earum alias ad ullam fuga, iusto ratione animi praesentium inventore rem quibusdam dolore placeat sed rerum beatae.</p>
+        <div class="intro">
+          <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+          <ul class="info">
+            <li>
+              <h2>Easy to get started</h2>
+              <p>Schedule your first lesson or sign up for a program</p>
+            </li>
+            <li>
+              <h2>Everything in one place</h2>
+              <p>All of your lessons can be accessed through you personalized dashboard</p>
+            </li>
+            <li>
+              <h2>Safe and secure payments</h2>
+              <p>Pay for everything up front or set a up subscription</p>
+            </li>
+          </ul>
         </div>
         <form action="" id="signup">
           <h1>Start Lyrning</h1>
-          <h2>I'm a </h2>
+          <h2>I'm a</h2>
           <div class="radios">
             <input type="radio" name="role" id="student" value="student" checked required>
             <label for="student">Student</label>
@@ -63,7 +77,7 @@
           <label for="confirmPassword">Confirm Password</label>
           <input type="password" name="confirmPassword" id="confirmPassword" required>
           <input type="submit" value="Create account">
-          <p class="error"></p>
+          <p class="error" id="error"></p>
           <p class="have-account">Have an account? <a href="sign-in">Sign in</a></p>
         </form>
       <!-- </section>
