--- a/public/why.html
+++ b/public/why.html
@@ -19,7 +19,6 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="story.html">Our Story</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="sign-in.html">Sign In</a></li>
           <li><a class="enroll" href="enroll.html">Enroll</a></li>
@@ -34,8 +33,8 @@
       <section class="hero">
         <div class="intro">
           <h1>Why Lyrn</h1>
-          <p>By Duncan Morais</p>
-          <div class="founder-card">Just wondering...</div>
+          <p>What makes us different?</p>
+          <!-- <div class="founder-card">Just wondering...</div> -->
         </div>
       </section>
 
