get the links working

--- a/public/index.html
+++ b/public/index.html
@@ -295,10 +295,9 @@
           <h3>Site Map</h3>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="">About Lyrn</a></li>
-            <li><a href="enroll.html">Enrollment</a></li>
-            <li><a href="sign-in.html">Parent Portal</a></li>
+            <li><a href="why.html">Why Lyrn</a></li>
             <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="sign-up.html">Sign up</a></li>
             <li><a href="sign-in.html">Log In</a></li>
           </ul>
         </div>
