--- a/public/pricing.html
+++ b/public/pricing.html
@@ -15,7 +15,7 @@
 
   <body>
     <header class="nav-start">
-      <a href="#" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
       </label>
@@ -23,10 +23,10 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="story.html">Our Story</a></li>
+          <li><a href="why.html">Why Lyrn</a></li>
           <li><a href="#">Pricing</a></li>
           <li><a href="sign-in.html">Sign In</a></li>
-          <li><a class="enroll" href="enroll.html">Enroll</a></li>
+          <li><a class="enroll" href="sign-up.html">Enroll</a></li>
         </ul>
       </nav>
     </header>
@@ -302,10 +302,9 @@
           <h3>Site Map</h3>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="story.html">About Lyrn</a></li>
-            <li><a href="enroll.html">Enrollment</a></li>
-            <li><a href="sign-in.html">Parent Portal</a></li>
+            <li><a href="why.html">Why Lyrn</a></li>
             <li><a href="#">Pricing</a></li>
+            <li><a href="sign-up.html">Sign Up</a></li>
             <li><a href="sign-in.html">Log In</a></li>
           </ul>
         </div>
