Test Editor - update

--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -211,9 +211,9 @@
     </form>
 
     <div id='finalProduct'>
-      <div id='qNumbers' class='finalProductDiv'>Questions Numbers</div>
+      <div id='qNumbers' class='finalProductDiv'></div>
       <div id='pText' class='finalProductDiv'></div>
-      <div id='qList' class='finalProductDiv'>Questions</div>
+      <div id='qList' class='finalProductDiv'></div>
     </div>
 
   </main>
