good place to commit

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -352,7 +352,8 @@
         <!-- <button class="button" onclick="openModal('secretary')">Add Secretary</button> -->
         <button class="button" onclick="openModal('school')">Add School</button>
         <button class="button" onclick="openModal('extracurricular')">Add Extracurricular</button>
-        <button class="button" onclick="resetPassword()">reset password</button>
+        <!-- <button class="button" onclick="resetPassword()">reset password</button> -->
+        <a href="https://flex.twilio.com/auburn-goose-1633" target="_blank">Contact Center</a>
       </div>
 
       <h2 style="margin-bottom: 0px;">Students</h2>
